--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -16,7 +16,7 @@
 	  <nav class="navbar navbar-light bg-light">
 	    <div class="container-fluid">
 	  	  <a class="navbar-brand" href="/">
-		    <img src="../static/img/favicon_96x96.ico" alt="" width="24" height="24" class="d-inline-block align-text-top">
+		    <img src="static/img/favicon_96x96.ico" alt="" width="24" height="24" class="d-inline-block align-text-top">
 		    <b>Ma.kak.si</b>
 		  </a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
