--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="en-us">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" href="static/style.css">
     <link rel="icon" type="image/x-icon" href="static/img/favicon_16x16.png" sizes="16x16">
     <link rel="icon" type="image/x-icon" href="static/img/favicon_32x32.ico" sizes="32x32">
     <link rel="icon" type="image/x-icon" href="static/img/favicon_96x96.ico" sizes="96x96">
@@ -16,7 +17,7 @@
 	  <nav class="navbar navbar-light bg-light">
 	    <div class="container-fluid">
 	  	  <a class="navbar-brand" href="/">
-		    <img src="static/img/favicon_96x96.ico" alt="" width="24" height="24" class="d-inline-block align-text-top">
+		    <img src="static/img/favicon_32x32.ico" alt="" width="24" height="24" class="d-inline-block align-text-top">
 		    <b>Ma.kak.si</b>
 		  </a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,8 +26,8 @@
 		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 		    <div class="navbar-nav">
 			  <a class="nav-link active" aria-current="page" href="/explore">Explore</a>
-			  <a class="nav-link" href="#">nav-link1</a>
-			  <a class="nav-link" href="#">nav-link2</a>
+			  <a class="nav-link" href="#none">nav-link2</a>
+			  <a class="nav-link" href="#none">nav-link3</a>
 		    </div>
 		  </div>
 	    </div>
