--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -17,7 +17,7 @@
 	  <nav class="navbar navbar-light bg-light">
 	    <div class="container-fluid">
 	  	  <a class="navbar-brand" href="/">
-		    <img src="static/img/favicon_32x32.ico" alt="" width="24" height="24" class="d-inline-block align-text-top">
+		    <img src="static/img/favicon_96x96.ico" alt="" width="24" height="24" class="d-inline-block align-text-top">
 		    <b>Ma.kak.si</b>
 		  </a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,8 +26,8 @@
 		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 		    <div class="navbar-nav">
 			  <a class="nav-link active" aria-current="page" href="/explore">Explore</a>
-			  <a class="nav-link" href="#none">nav-link2</a>
-			  <a class="nav-link" href="#none">nav-link3</a>
+			  <a class="nav-link" href="/downloads">Downloads</a>
+			  <a class="nav-link" href="/about">About</a>
 		    </div>
 		  </div>
 	    </div>
