--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -18,7 +18,7 @@
 	    <div class="container-fluid">
 	  	  <a class="navbar-brand" href="/">
 		    <img src="static/img/favicon_96x96.ico" alt="" width="24" height="24" class="d-inline-block align-text-top">
-		    <b>Ma.kak.si</b>
+		    <b>a.kak.si</b>
 		  </a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
