--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -27,7 +27,7 @@
 		    <div class="navbar-nav">
 			  <a class="nav-link active" aria-current="page" href="/explore">Explore</a>
 			  <a class="nav-link" href="/downloads">Downloads</a>
-			  <a class="nav-link" href="/about">About</a>
+			  <a class="nav-link" href="/about">About Author</a>
 		    </div>
 		  </div>
 	    </div>
