--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -14,7 +14,7 @@
       <a href={{ page.index }}>{{ page.Ma.kak.si }}</a>
     {% endfor %}
 	<header>
-	  <nav class="navbar navbar-light bg-light">
+	  <nav class="navbar navbar-light bg-secondary.bg-gradient">
 	    <div class="container-fluid">
 	  	  <a class="navbar-brand" href="/">
 		    <img src="static/img/favicon_96x96.ico" alt="" width="24" height="24" class="d-inline-block align-text-top">
