--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -38,4 +38,10 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
+  <footer class="bg-light text-center text-lg-start">
+	<div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+	  Made with:
+	  <a class="text-dark" href="https://pages.github.com/">Github Pages</a>
+	</div>
+  </footer>
 </html>
