--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,8 @@
 <style>
   body {
-    background-color: #a0a0a0;
+    background-color: aqua;
+  }
+  .navbar {
+    background-color:aquamarine
   }
 </style>
