--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: lightcyan!important;
+  background-color: lightcyan;
 }
 .navbar {
   background-color:gainsboro;
@@ -8,7 +8,7 @@ body {
   border-bottom-color: gray;
 }
 .copybar {
-  background-color:gainsboro;
+  background-color:gainsboro!important;
   border-top-width: 2px;
   border-top-style: ridge;
   border-top-color: gray;
