--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -36,7 +36,7 @@
     <main>
       {{ content }}
     </main>
-    <footer class="text-center text-lg-start">
+    <footer class="copybar text-center text-lg-start">
 	  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
 	    Made with:
 	    <a class="text-dark" href="https://pages.github.com/">Github Pages</a>
