--- a/static/style.css
+++ b/static/style.css
@@ -8,13 +8,13 @@ html, body {
   height: 100%;
 }
 .navbar {
-  background-color:gainsboro;
+  background-color:lightgray;
   border-bottom-width: 2px;
   border-bottom-style: ridge;
   border-bottom-color: gray;
 }
 .copybar {
-  background-color:gainsboro!important;
+  background-color:lightgray;
   border-top-width: 2px;
   border-top-style: ridge;
   border-top-color: gray;
