--- a/static/style.css
+++ b/static/style.css
@@ -2,20 +2,22 @@ body {
   background-color: white;
 }
 main {
-  min-height: 100%;
+  min-height: 90%;
 }
 html, body {
-  height: 100%;
+  height: 90%;
 }
 .navbar {
   background-color:lightgray;
   border-bottom-width: 2px;
   border-bottom-style: ridge;
   border-bottom-color: gray;
+  margin-bottom: 5%;
 }
 .copybar {
   background-color:lightgray;
   border-top-width: 2px;
   border-top-style: ridge;
   border-top-color: gray;
+  margin-top: 5%;
 }
