--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -4,10 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="static/style.css">
     <link rel="icon" type="image/x-icon" href="static/img/favicon_16x16.png" sizes="16x16">
     <link rel="icon" type="image/x-icon" href="static/img/favicon_32x32.ico" sizes="32x32">
     <link rel="icon" type="image/x-icon" href="static/img/favicon_96x96.ico" sizes="96x96">
+
+    <!--LiveInternet counter--><script>
+    new Image().src = "https://counter.yadro.ru/hit?r"+
+    escape(document.referrer)+((typeof(screen)=="undefined")?"":
+    ";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
+    screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
+    ";h"+escape(document.title.substring(0,150))+
+    ";"+Math.random();</script><!--/LiveInternet-->
+
   </head>
   <body>
     {% for page in site.pages %}
@@ -37,10 +46,15 @@
       {{ content }}
     </main>
     <footer class="copybar text-center text-lg-start">
-	  <div class="text-center p-3">
+	<div class="text-center p-3">
 	    Made with:
 	    <a class="text-dark" href="https://pages.github.com/">Github Pages</a>
-	  </div>
+
+	    <!--LiveInternet logo--><a href="https://www.liveinternet.ru/click"
+            target="_blank"><img src="https://counter.yadro.ru/logo?26.6"
+            title="LiveInternet: показано число посетителей за сегодня"
+            alt="" style="border:0" width="88" height="15"/></a><!--/LiveInternet-->
+	</div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
