--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,14 +7,35 @@ body {
     height: 1440px;
     top: calc(50vh - 720px);
     left: calc(50vw - 1280px);
-    background-image: url("src/img/background_0.png") 50% 0 no-repeat fixed;
+    background-image: url("../img/background_0.png");
+    background-repeat: no-repeat;
     background-size: cover;
 }
 #hero {
-    position: fixed;
+    position: relative;
     width: 64px;
     height: 64px;
-    top: calc(50vh - 32px);
-    left: calc(50vw - 32px);
+    top: calc(50% - 32px);
+    left: calc(50% - 32px);
     background-color: #f2f2f2;
+}
+#dpad {
+    position: fixed;
+    width: 192px;
+    height: 192px;
+    right: 16px;
+    bottom: 16px;
+}
+.dpad {
+    display: flex;
+    width: 100%;
+    height: calc(100% / 3);
+}
+.dpad button, .dpad div {
+    width: calc(100% / 3);
+    height: 100%;
+}
+.dpad button {
+    background-color: #f2f2f2;
+    opacity: 75%;
 }
