--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,3 +2,11 @@ body {
     margin: 0;
     overflow-x: hidden;
 }
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
