--- a/src/css/game.css
+++ b/src/css/game.css
@@ -16,11 +16,27 @@ body {
 .hero {
     position: relative;
     width: 64px;
-    height: 64px;
-    top: calc(50% - 32px);
+    height: 80px;
+    top: calc(50% - 48px);
     left: calc(50% - 32px);
-    background-color: #f2f2f2;
+    background-color: transparent;
     z-index: -200;
+}
+.hero p {
+    height: 16px;
+    width: 64px;
+    margin: 0;
+    text-align: center;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 12px;
+    color: #f2f2f2;
+}
+#hero-img {
+    height: 64px;
+    width: 64px;
+    background-image: url("../img/background_0.png");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 #joystick {
     position: fixed;
