--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,13 @@ body {
     margin: 0;
     overflow-x: hidden;
 }
+#logmenu {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
 .noselect {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
