--- a/src/css/game.css
+++ b/src/css/game.css
@@ -8,7 +8,7 @@ body {
     height: 1440px;
     top: calc(50vh - 720px);
     left: calc(50vw - 1280px);
-    background-image: url("../img/background_0.png");
+    background-image: url("../img/game/background_0.png");
     background-repeat: no-repeat;
     background-size: cover;
     z-index: -300;
@@ -34,7 +34,7 @@ body {
 #hero-img {
     height: 64px;
     width: 64px;
-    background-image: url("../img/background_0.png");
+    background-image: url("../img/game/background_0.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
