--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,12 +2,63 @@ body {
     margin: 0;
     overflow-x: hidden;
 }
-#logmenu {
-    position: absolute;
+#log-menu {
+    position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 0;
+}
+#log-menu form {
+    width: 90%;
+    max-width: 320px;
+    height: 480px;
+    margin: calc(50vh - 240px) auto auto auto;
+    border-radius: 16px;
+    background-color: #f2f2f2;
+    box-shadow: 8px 8px 16px #0d0d0d;
+}
+#log-menu form div {
+    width: calc(100% - 8px);
+    height: 56px;
+    background-color: #0099ff;
+    border: 4px solid #f2f2f2;
+    border-bottom: 0;
+    border-radius: 16px 16px 0 0;
+    margin-bottom: 80px;
+    text-align: center;
+}
+#log-menu form div p {
+    height: 32px;
+    margin: 16px 0 auto 0;
+    color: #f2f2f2;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bolder;
+}
+#log-menu form input, #log-menu form button {
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    padding: 0;
+    height: 32px;
+}
+#log-menu form input {
+    width: 80%;
+    margin: 0 auto 32px calc(10% - 0.5px);
+}
+#log-menu form input:focus {
+    outline: 0;
+    border: 1px solid #0099ff;
+}
+#log-menu form button {
+    width: 60%;
+    margin: 48px auto 32px calc(20% - 0.5px);
+    color: #4d4d4d;
+}
+#log-menu form button:hover {
+    border: 1px solid #0099ff;
+    color: #0099ff;
 }
 .noselect {
     -webkit-touch-callout: none;
