--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,6 +10,7 @@ body {
     left: 0;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 0;
+    display: none;
 }
 #log-menu form {
     width: 90%;
