--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,14 @@ body {
     margin: 0;
     overflow-x: hidden;
 }
+#nav-cont {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 72px;
+    background-color: #4d4d4d;
+    z-index: 100;
+}
 #log-menu {
     position: fixed;
     width: 100%;
