--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,25 +1,38 @@
 body {
     margin: 0;
     overflow-x: hidden;
+    background-color: #f2f2f2;
 }
 #nav-cont {
     position: absolute;
     top: 0;
     width: 100%;
     height: 72px;
+    box-shadow: 0 4px 6px #0d0d0d;
     background-color: #4d4d4d;
-    z-index: 100;
+    z-index: 200;
 }
 #nav-cont div {
     position: relative;
-    top: 4px;
+    display: flex;
+    top: 3px;
     left: 8px;
     height: 64px;
     cursor: pointer;
 }
 #nav-cont div img {
+    box-shadow: 0 2px 4px #0d0d0d;
+    border-radius: 64px;
     width: 64px;
     height: 64px;
+}
+#nav-cont div p {
+    height: 64px;
+    font-size: 32px;
+    margin: 0;
+    color: #f2f2f2;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-weight: 400;
 }
 #log-menu {
     position: fixed;
@@ -28,7 +41,7 @@ body {
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 0;
+    z-index: 300;
     display: none;
 }
 #log-menu form {
