--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,12 +5,13 @@ body {
 }
 #nav-cont {
     position: absolute;
+    display: flex;
     top: 0;
     width: 100%;
     height: 72px;
     box-shadow: 0 4px 6px #0d0d0d;
     background-color: #4d4d4d;
-    z-index: 200;
+    z-index: 300;
 }
 #nav-cont div {
     position: relative;
@@ -42,10 +43,9 @@ body {
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 300;
-    display: none;
+    z-index: 200;
 }
-#log-menu form {
+#log-form {
     width: 90%;
     max-width: 320px;
     height: 480px;
@@ -71,29 +71,29 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bolder;
 }
-#log-menu form input, #log-menu form button {
+#log-form input, #log-form button {
     border: 1px solid #cccccc;
     border-radius: 4px;
     padding: 0;
     height: 32px;
 }
-#log-menu form input {
+#log-form input {
     text-align: center;
     width: calc(80% - 16px);
     padding: 0 8px 0 8px;
     margin: 0 auto 32px calc(10% - 0.5px);
 }
-#log-menu form input:focus {
+#log-form input:focus {
     text-align: left;
     outline: 0;
     border: 1px solid #0099ff;
 }
-#log-menu form button {
+#log-form button {
     width: 60%;
     margin: 56px auto 32px calc(20% - 0.5px);
     color: #4d4d4d;
 }
-#log-menu form button:hover {
+#log-form button:hover {
     border: 1px solid #0099ff;
     color: #0099ff;
 }
