--- a/src/css/main.css
+++ b/src/css/main.css
@@ -36,7 +36,7 @@ body {
     font-family: "Comic Sans MS", "Comic Sans", cursive;
     font-weight: 400;
 }
-#log-menu {
+#black-bg {
     position: fixed;
     width: 100%;
     height: 100%;
