--- a/src/css/main.css
+++ b/src/css/main.css
@@ -33,7 +33,7 @@ body {
     font-size: 32px;
     margin: 8px 0 auto 0;
     color: #78d5ed;
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-family: "Comic Sans MS", "Comic Sans";
     font-weight: 400;
 }
 #black-bg {
