--- a/src/main.css
+++ b/src/main.css
@@ -1,137 +1,151 @@
 :root{
-    --primary-color: #404040;
-    --primary-text-color: #f2f2f2;
-    --second-color: #262626;
-    --second-text-color: #bfbfbf;
-    --third-color: #0d0d0d;
+  --primary-color: #404040;
+  --primary-text-color: #f2f2f2;
+  --second-color: #262626;
+  --second-text-color: #bfbfbf;
+  --third-color: #0d0d0d;
 }
 body.light{
-    --primary-color: #f2f2f2;
-    --primary-text-color: #0d0d0d;
-    --second-color: #bfbfbf;
-    --second-text-color: #404040;
-    --third-color: #8c8c8c;
+  --primary-color: #f2f2f2;
+  --primary-text-color: #0d0d0d;
+  --second-color: #bfbfbf;
+  --second-text-color: #404040;
+  --third-color: #8c8c8c;
 }
 .noselect, img {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  font-family: Constantia, "Palatino Linotype", Palatino, Georgia, serif;
+  color: var(--primary-text-color);
 }
 body {
-    overflow-x: hidden;
-    background-color: var(--primary-color);
+  overflow-x: hidden;
+  background-color: var(--primary-color);
 }
 a {
-    display: flex;
-    text-decoration: none;
-    cursor: pointer;
-    color: var(--primary-text-color);
-}
-h3, p {
-    font-family: Constantia, "Palatino Linotype", Palatino, Georgia, serif;
-    color: var(--primary-text-color);
+  text-decoration: none;
+  color: var(--primary-text-color);
 }
 #nav {
-    display: flex;
-    position: fixed;
-    box-shadow: -3px 2px 4px var(--third-color);
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 64px;
-    background-color: var(--second-color);
-    z-index: 100;
+  display: flex;
+  position: fixed;
+  box-shadow: -3px 2px 4px var(--third-color);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 64px;
+  background-color: var(--second-color);
+  z-index: 100;
 }
-#nav p {
-    color: var(--primary-text-color);
-    font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
-    text-shadow: -3px 2px 4px var(--third-color);
-    font-weight: 300;
-    height: 64px;
-    font-size: 32px;
-    margin: 10px 8px auto 0px;
-    cursor: pointer;
+#nav form {
+  margin: 10px auto auto 10px;
 }
-#nav a:hover p, #nav p:hover, i:hover{
-    color: var(--second-text-color)!important;
-    /* text-decoration: underline; */
+#nav p, #nav label, #nav select {
+  color: var(--primary-text-color);
+  text-shadow: -3px 2px 4px var(--third-color);
+  font-weight: 300;
+  height: 64px;
+  font-size: 32px;
+  margin: 10px 8px auto 0px;
+}
+#nav select {
+  appearance: none;
+  background-color: var(--second-color);
+  border: 0!important;
+  outline: 0!important;
+  margin: 0 0 0 -12px;
+  height: 36px;
+  z-index: 100;
+}
+#nav option {
+  font-weight: 100;
+  font-size: 20px;
+}
+a:hover, #lang-btn:hover, i:hover, #nav select:hover{
+  color: var(--second-text-color)!important;
+  cursor: pointer;
+  /* text-decoration: underline; */
 }
 #nav a img {
-    margin: 2.5px 0 auto 8px;
-    height: 56px;
-    aspect-ratio: 1 / 1;
-    box-shadow: -3px 2px 4px var(--third-color);
-    border-radius: 64px;
+  margin: 2.5px 0 auto 8px;
+  height: 56px;
+  aspect-ratio: 1 / 1;
+  box-shadow: -2px 2px 4px var(--third-color);
+  border-radius: 64px;
 }
 #nav div {
-    display: flex;
-    margin: 0 0 0 auto;
+  display: flex;
+  margin: 0 4px 0 auto;
+}
+#lang-btn {
+  font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
 }
 #nav i {
-    color: var(--primary-text-color);
-    margin: auto 4px auto 4px;
-    height: 40px;
-    aspect-ratio: 1 / 1;
-    font-size: 40px;
-    cursor: pointer;
+  color: var(--primary-text-color);
+  text-shadow: -3px 2px 4px var(--third-color);
+  margin: auto 4px auto 4px;
+  height: 40px;
+  aspect-ratio: 1 / 1;
+  font-size: 40px;
 }
 .spinner {
-    transition: transform 0.4s linear;
-    transform-origin: center;
+  transition: transform 0.4s linear;
+  transform-origin: center;
 }
 p.spinner {
-    transform-origin: center 32.5%;
+  transform-origin: center 32.5%;
 }
 /* .spinner.in {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 } */
 .spinner.out {
-    transform: rotate(360deg);
+  transform: rotate(360deg);
 }
 #dropdown-menu {
-    z-index: 100;
-    position: absolute;
-    top: 64px;
-    right: 2px;
-    min-width: 160px;
-    background-color: var(--second-color);
-    list-style-type: none;
-    border-top: 2px solid var(--third-color);
-    border-radius: 0 0 8px 8px;
-    transform-origin: top center;
-    animation: scaleZ 512ms 64ms ease-in-out;
-    animation-fill-mode: forwards;
-    opacity: 0;
-    transform: scale(0);
+  z-index: 100;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  min-width: 160px;
+  background-color: var(--second-color);
+  list-style-type: none;
+  border-top: 2px solid var(--third-color);
+  border-radius: 0 0 8px 8px;
+  transform-origin: top center;
+  animation: scaleZ 512ms 64ms ease-in-out;
+  animation-fill-mode: forwards;
+  opacity: 0;
+  transform: scale(0);
 }
 .dropdown-item {
-    color: var(--primary-text-color);
-    text-align: center;
-    font-size: 20px;
-    cursor: pointer;
-    padding: 4px 0 4px 0;
+  color: var(--primary-text-color);
+  text-align: center;
+  font-size: 20px;
+  padding: 4px 0 4px 0;
+  cursor: pointer;
 }
 .dropdown-item:last-child{
-    border-radius: 0 0 8px 8px;
-    padding-bottom: 8px;
+  border-radius: 0 0 8px 8px;
+  padding-bottom: 8px;
 }
 .dropdown-item:hover {
-    background-color: var(--third-color);
+  background-color: var(--third-color);
 }
 @keyframes scaleZ {
   0% {
-    opacity: 0;
-    transform: scale(0);
+  opacity: 0;
+  transform: scale(0);
   }
   100% {
-    opacity: 1;
-    transform: scale(1);
+  opacity: 1;
+  transform: scale(1);
   }
 }
