--- a/src/main.css
+++ b/src/main.css
@@ -58,7 +58,8 @@ a {
 #nav select {
   appearance: none;
   background-color: var(--second-color);
-  border: 0!important;
+  border: 0;
+  outline: 0;
   margin: 0 0 0 -12px;
   height: 36px;
   z-index: 100;
