--- a/src/main.css
+++ b/src/main.css
@@ -33,66 +33,115 @@ body {
 }
 a {
   text-decoration: none;
-  color: var(--primary-text-color);
 }
-#nav {
+#notification-zone {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 100%;
+  min-width: 256px;
+  max-width: 460px;
+  z-index: 100;
+}
+.notification {
+  position: relative;
+  width: 100%;
+  margin: 6px auto 6px auto;
+  aspect-ratio: 6/1;
+  border-radius: 8px;
+  opacity: 0.25;
+  z-index: 100;
+}
+.notification:hover {
+  opacity: 0.75;
+}
+.notification.notify {
+  background-color: #ABEBC6;
+  border: 2px solid #58D68D;
+}
+.notification.alert {
+  background-color: #F9E79F;
+  border: 2px solid #F4D03F;
+}
+.notification.error {
+  background-color: #F5B7B1;
+  border: 2px solid #EC7063;
+}
+#header {
   display: flex;
   position: fixed;
-  box-shadow: -3px 2px 4px var(--third-color);
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 64px;
+  width: 100%;
+  height: 56px;
   background-color: var(--second-color);
-  z-index: 100;
-  transition: none;
+  box-shadow: -3px 2px 4px var(--third-color);
+  z-index: 50;
 }
-#nav form {
-  margin: auto auto auto 10px;
-}
-#nav p, #nav label, #nav select {
-  color: var(--primary-text-color);
-  text-shadow: -3px 2px 4px var(--third-color);
-  font-weight: 300;
-  font-size: 36px;
-  margin: auto 8px auto 0px;
-}
-#nav select {
-  appearance: none;
-  background-color: var(--second-color);
-  border: 0;
-  outline: 0;
-  margin: 0 0 0 -12px;
-  height: 36px;
-  z-index: 100;
-}
-#nav option {
-  font-weight: 100;
-  font-size: 20px;
-}
-a:hover, #lang-btn:hover, i:hover, #nav select:hover{
-  color: var(--second-text-color)!important;
+#header div:first-child {
+  display: flex;
+  margin: auto auto auto 12px;
   cursor: pointer;
 }
-#nav a img {
-  margin: 2.5px 0 auto 8px;
-  height: 56px;
-  aspect-ratio: 1 / 1;
-  box-shadow: -2px 2px 4px var(--third-color);
-  border-radius: 64px;
+#header div:nth-child(2) {
+  margin: auto 12px auto auto;
+  cursor: pointer;
 }
-#nav div {
-  display: flex;
-  margin: 0 4px 0 auto;
-}
-#nav i {
-  color: var(--primary-text-color);
-  text-shadow: -3px 2px 4px var(--third-color);
-  margin: auto 4px auto 4px;
-  height: 40px;
-  aspect-ratio: 1 / 1;
+#header p, #header i {
   font-size: 40px;
+  font-weight: 300;
+  text-shadow: -3px 2px 4px var(--third-color);
 }
+#header p {
+  margin-top: -2px;
+  font-size: 36px;
+}
+#header i {
+  margin-top: 2px;
+}
+#navigation, #settings-menu, #content {
+  top: 57px;
+}
+#navigation, #settings-menu {
+  position: fixed;
+  background-color: var(--second-color);
+
+  z-index: 50;
+}
+#navigation {
+  left: 0;
+  width: 30%;
+  min-width: 256px;
+  max-width: 460px;
+  border-radius: 0 0 8px 0;
+}
+#settings-menu {
+  right: 0;
+  width: 60%;
+  min-width: 460px;
+  border-radius: 0 0 0 8px;
+}
+.nav-item-title {
+  padding: 4px 0 4px 8px;
+  font-size: 20px;
+  font-weight: 300;
+}
+.nav-item-description {
+  padding: 0 0 8px 12px;
+  color: var(--second-text-color);
+}
+.nav-item:hover {
+  background-color: var(--third-color);
+  cursor: pointer;
+}
+#content {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  z-index: 0;
+}
+
 .spinner {
   transition: transform 0.4s linear;
   transform-origin: center;
@@ -100,104 +149,77 @@ a:hover, #lang-btn:hover, i:hover, #nav select:hover{
 p.spinner {
   transform-origin: center 32.5%;
 }
-.spinner.out {
+.spinner.go {
   transform: rotate(360deg);
 }
-#dropdown-menu {
-  z-index: 100;
-  position: fixed;
-  top: 64px;
-  right: 0;
-  min-width: 160px;
-  background-color: var(--second-color);
-  list-style-type: none;
-  border-top: 2px solid var(--third-color);
-  border-radius: 0 0 8px 8px;
-  transform-origin: top center;
-  animation: scaleZ 512ms 64ms ease-in-out;
-  animation-fill-mode: forwards;
-  opacity: 0;
-  transform: scale(0);
-}
-.dropdown-item {
-  color: var(--primary-text-color);
-  text-align: center;
-  font-size: 20px;
-  padding: 4px 0 4px 0;
+.link:hover, #header div:first-child:hover p:nth-child(2) {
+  color: var(--second-text-color)!important;
   cursor: pointer;
-}
-.dropdown-item:last-child{
-  border-radius: 0 0 8px 8px;
-  padding-bottom: 8px;
-}
-.dropdown-item:hover {
-  background-color: var(--third-color);
-}
-@keyframes scaleZ {
-  0% {
-    opacity: 0;
-    transform: scale(0);
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
-#content {
-  position: absolute;
-  top: 64px;
-  width: 100%;
-  padding: 2vw;
-}
-#content div:first-child {
-  text-align: center;
-  font-size: 40px;
-  font-weight: 600;
-}
-#content div:first-child img {
-  width: 50%;
-  min-width: 224px;
-  max-width: 512px;
-}
-#content div:first-child p {
-  color: var(--second-color);
-  text-shadow: 1px -1px 4px var(--second-text-color);
 }
 
 @media screen and (min-width: 0px) {
-  #nav {
-    height: 40px;
+  #notification-zone {
+    width: calc(100% - 16px);
   }
-  #nav p, #nav label, #nav select {
-    font-size: 22.5px;
+  #header {
+    height: 42px;
+    box-shadow: -2.25px 1.5px 3px var(--third-color);
   }
-  #nav i {
-    font-size: 25px;
-    height: 25px;
+  #footer {
+    height: 42px;
+    box-shadow: -2.25px -1.5px 3px var(--third-color);
   }
-  #dropdown-menu, #content {
-    top: 40px;
+  #header p , #footer p, #header i, #footer i {
+    font-size: 30px;
+    font-weight: 300;
+    text-shadow: -2.25px 1.5px 3px var(--third-color);
   }
-  #content div:first-child {
-    font-size: 32px;
+  #header p {
+    font-size: 27px;
+  }
+  #content, #navigation, #settings-menu {
+    top: 43px;
+  }
+  #navigation {
+    width: 100%;
+    border-radius: 0;
+  }
+  #settings-menu {
+    width: 100%;
+    min-width: 0;
+    border-radius: 0;
   }
 }
 @media screen and (min-width: 480px) {
-  #nav {
-    height: 64px;
+  #notification-zone {
+    width: 30%;
   }
-  #nav p, #nav label, #nav select {
+  #header {
+    height: 56px;
+    box-shadow: -3px 2px 4px var(--third-color);
+  }
+  #footer {
+    height: 42px;
+    box-shadow: -3px -2px 4px var(--third-color);
+  }
+  #header p , #footer p, #header i, #footer i {
+    font-size: 40px;
+    font-weight: 300;
+    text-shadow: -3px 2px 4px var(--third-color);
+  }
+  #header p , #footer p {
     font-size: 36px;
   }
-  #nav i {
-    font-size: 40px;
-    height: 40px;
+  #content, #navigation, #settings-menu {
+    top: 57px;
   }
-  #dropdown-menu, #content {
-    top: 64px;
+  #navigation {
+    width: 30%;
+    border-radius: 0 0 8px 0;
   }
-  #content div:first-child {
-    font-size: 40px;
+  #settings-menu {
+    width: 60%;
+    min-width: 460px;
+    border-radius: 0 0 0 8px;
   }
 }
