--- a/src/main.css
+++ b/src/main.css
@@ -140,9 +140,12 @@ a {
 }
 #content {
   position: absolute;
-  left: 0;
+  left: -100%;
   width: 100%;
   z-index: 0;
+
+  background-color: #f2f2f2;
+  height: 100%;
 }
 
 .spinner {
