--- a/src/main.css
+++ b/src/main.css
@@ -19,6 +19,13 @@ body.purple{
   --second-text-color: #ffffb3;
   --third-color: #4d004d;
 }
+body.ocean{
+  --primary-color: #0073e6;
+  --primary-text-color: #80bfff;
+  --second-color: #0059b3;
+  --second-text-color: #b3d9ff;
+  --third-color: #004080;
+}
 .noselect, img {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -28,6 +35,7 @@ body.purple{
   user-select: none;
 }
 * {
+  color: deepskyblue;
   margin: 0;
   padding: 0;
   font-family: Constantia, "Palatino Linotype", Palatino, Georgia, serif;
@@ -125,8 +133,8 @@ a {
 }
 #settings-menu {
   right: 0;
-  width: 60%;
-  min-width: 460px;
+  width: 80%;
+  min-width: 496px;
   border-radius: 0 0 0 8px;
 }
 .nav-item:last-child {
@@ -231,6 +239,9 @@ p.spinner {
     min-width: 0;
     border-radius: 0;
   }
+  .setting {
+    display: block;
+  }
 }
 @media screen and (min-width: 480px) {
   #notification-zone {
@@ -260,8 +271,11 @@ p.spinner {
     border-radius: 0 0 8px 0;
   }
   #settings-menu {
-    width: 60%;
-    min-width: 460px;
+    width: 80%;
+    min-width: 496px;
     border-radius: 0 0 0 8px;
+  }
+  .setting {
+    display: flex;
   }
 }
