--- a/src/main.css
+++ b/src/main.css
@@ -67,7 +67,6 @@ a {
   border-radius: 8px;
   opacity: 0.5;
   z-index: 100;
-  /* text-shadow: -0.4px 0.4px 0.8px #666666; */
 }
 .notification:hover {
   opacity: 1;
@@ -89,10 +88,10 @@ a {
 }
 .notification.error {
   background-color: #ff9999;
-  border: 2px solid #cc0000;
+  border: 2px solid #ff4d4d;
 }
 .notification.error p {
-  color: #cc0000;
+  color: #ff4d4d;
 }
 .notification-title {
   font-size: 18px;
