--- a/src/css/account.css
+++ b/src/css/account.css
@@ -1,7 +1,7 @@
-.log-reg {
+.log-reg form {
   width: 100%;
-  text-align: center;
   margin: 5vh 0;
+  text-align: center;
 }
 .log-reg legend {
   margin: 16px 4px;
@@ -13,6 +13,6 @@
   margin: 12px 4px;
 }
 .log-reg input[type="submit"] {
-  margin: 18px 4px 26px;
   width: 128px;
+  margin: 18px 4px 26px;
 }
