--- a/src/css/index.css
+++ b/src/css/index.css
@@ -8,6 +8,13 @@
   width: 40%;
   max-width: 512px;
 }
+.text {
+  width: 90%;
+  margin: 5vw;
+}
+.text p {
+  font-size: 20px;
+}
 @media screen and (min-width: 0px) {
   #imgs {
     display: block;
@@ -15,12 +22,18 @@
   #imgs img {
     width: 80%;
   }
+  .text p {
+    font-size: 14px;
   }
+}
 @media screen and (min-width: 480px) {
   #imgs {
     display: flex;
   }
   #imgs img {
     width: 40%;
+  }
+  .text p {
+    font-size: 20px;
   }
 }
