--- a/src/assets/templates/struct/struct.scss
+++ b/src/assets/templates/struct/struct.scss
@@ -2,16 +2,20 @@ a {
   text-decoration: inherit;
   color: inherit;
   font-size: 20px;
-}
-a:hover {
-  color: violet;
-}
-a.el0 {
-  margin-left: 4px;
-}
-a.el1 {
-  margin-left: 10px;
-}
-a.el2 {
-  margin-left: 16px;
+
+  &:hover {
+    color: violet;
+  }
+
+  &.el0 {
+    margin-left: 4px;
+  }
+  
+  &.el1 {
+    margin-left: 10px;
+  }
+  
+  &.el2 {
+    margin-left: 16px;
+  }
 }
